--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baresoil",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Create, develop, and deploy Baresoil applications.",
   "main": "lib/cli.js",
   "bin": "lib/cli.js",
@@ -15,18 +15,19 @@
   },
   "dependencies": {
     "async": "^2.1.5",
-    "baresoil-client": "^0.2.0",
-    "baresoil-devenv": "^0.2.1",
+    "baresoil-client": "^0.2.2",
+    "baresoil-devenv": "^0.2.2",
     "colors": "^1.1.2",
     "e164": "0.0.5",
     "fs-extra": "^2.0.0",
-    "inquirer": "^3.0.5",
+    "inquirer": "^3.0.6",
     "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.4",
     "mime-types": "^2.1.14",
     "minimist": "^1.2.0",
+    "strip-ansi": "^3.0.1",
     "validator": "^7.0.0",
     "walk": "^2.3.9",
-    "ws": "^2.1.0"
+    "ws": "^2.2.0"
   }
 }
