--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "baresoil",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "Create, develop, and deploy Baresoil applications.",
   "main": "lib/cli.js",
   "bin": "lib/cli.js",
@@ -11,24 +11,25 @@
   "author": "Iceroad LLC <contact@iceroad.io>",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">=6.3.4"
+    "node": ">=6.10.3"
   },
   "dependencies": {
-    "async": "^2.3.0",
-    "baresoil-client": "^0.2.2",
-    "baresoil-devenv": "^0.2.4",
+    "async": "^2.4.0",
+    "baresoil-client": "^0.2.4",
+    "baresoil-devenv": "^0.2.5",
     "colors": "^1.1.2",
     "e164": "0.0.5",
-    "fs-extra": "^2.1.2",
+    "fs-extra": "^3.0.1",
     "inquirer": "^3.0.6",
     "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.4",
     "mime-types": "^2.1.15",
     "minimist": "^1.2.0",
-    "runtype": "^0.1.1",
+    "runtype": "^0.1.5",
     "strip-ansi": "^3.0.1",
+    "temp": "^0.8.3",
     "validator": "^7.0.0",
     "walk": "^2.3.9",
-    "ws": "^2.2.3"
+    "ws": "^3.0.0"
   }
 }
