--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "baresoil",
-  "version": "0.2.7",
+  "title": "Baresoil CLI",
+  "version": "1.0.0",
   "description": "Create, develop, and deploy Baresoil applications.",
   "main": "lib/cli.js",
   "bin": "lib/cli.js",
@@ -8,28 +9,32 @@
     "type": "git",
     "url": "https://github.com/iceroad/baresoil.git"
   },
-  "author": "Iceroad LLC <contact@iceroad.io>",
+  "author": "Mayank Lahiri <mayank@iceroad.io>",
   "license": "Apache-2.0",
   "engines": {
     "node": ">=6.10.3"
   },
   "dependencies": {
-    "async": "^2.4.0",
-    "baresoil-client": "^0.2.4",
-    "baresoil-devenv": "^0.2.5",
+    "async": "^2.5.0",
+    "baresoil-client": "^1.0.0",
+    "baresoil-server": "^1.0.5",
+    "chalk": "^2.0.1",
+    "cli-table2": "^0.2.0",
     "colors": "^1.1.2",
     "e164": "0.0.5",
-    "fs-extra": "^3.0.1",
-    "inquirer": "^3.0.6",
+    "fs-extra": "^4.0.1",
+    "inquirer": "^3.2.1",
     "json-stable-stringify": "^1.0.1",
+    "jsonlint": "^1.6.2",
     "lodash": "^4.17.4",
-    "mime-types": "^2.1.15",
+    "mime-types": "^2.1.16",
     "minimist": "^1.2.0",
-    "runtype": "^0.1.5",
-    "strip-ansi": "^3.0.1",
+    "moment": "^2.18.1",
+    "runtype": "^0.2.3",
+    "strip-ansi": "^4.0.0",
     "temp": "^0.8.3",
-    "validator": "^7.0.0",
+    "validator": "^8.0.0",
     "walk": "^2.3.9",
-    "ws": "^3.0.0"
+    "ws": "^3.1.0"
   }
 }
